--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,13 +9,14 @@ crate-type = ["cdylib"]
 
 [dependencies]
 wasm-bindgen = "0.2"
+js-sys = "0.3"
 
 [dependencies.web-sys]
 version = "0.3"
 features = [
+  'CssStyleDeclaration',
   'Document',
   'Element',
   'HtmlElement',
-  'Node',
   'Window',
 ]
