--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ crate-type = ["cdylib"]
 [dependencies]
 wasm-bindgen = "0.2"
 js-sys = "0.3"
+console_error_panic_hook = "0.1"
 
 [dependencies.web-sys]
 version = "0.3"
