--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,9 +15,13 @@ console_error_panic_hook = "0.1"
 [dependencies.web-sys]
 version = "0.3"
 features = [
-  'CssStyleDeclaration',
-  'Document',
-  'Element',
-  'HtmlElement',
-  'Window',
+  "Document",
+  "Element",
+  "HtmlCanvasElement",
+  "WebGlBuffer",
+  "WebGlRenderingContext",
+  "WebGlProgram",
+  "WebGlShader",
+  "Window",
+  "console"
 ]
