--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   },
   "devDependencies": {
     "@wasm-tool/wasm-pack-plugin": "1.0.1",
+    "eslint": "^7.6.0",
+    "eslint-config-google": "^0.14.0",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^3.2.0",
     "text-encoding": "^0.7.0",
     "webpack": "^4.29.4",
     "webpack-cli": "^3.1.1",
     "webpack-dev-server": "^3.1.0"
-  }
+  },
+  "dependencies": {}
 }
