--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ crate-type = ["cdylib"]
 wasm-bindgen = "0.2"
 js-sys = "0.3"
 console_error_panic_hook = "0.1"
-nalgebra-glm = "0.7"
+nalgebra = "0.21"
 
 [dependencies.web-sys]
 version = "0.3"
@@ -23,6 +23,7 @@ features = [
   "WebGlRenderingContext",
   "WebGlProgram",
   "WebGlShader",
+  "WebGlUniformLocation",
   "Window",
   "console"
 ]
