--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ wasm-bindgen = "0.2"
 js-sys = "0.3"
 console_error_panic_hook = "0.1"
 nalgebra = "0.21"
+console_log = { version = "0.2", features = ["color"] }
 
 [dependencies.web-sys]
 version = "0.3"
