--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ console_error_panic_hook = "0.1"
 nalgebra = "0.21"
 console_log = { version = "0.2", features = ["color"] }
 log = "0.4"
-gltf = { version = "0.15", features = ["utils"] }
+gltf = { version = "0.15", features = ["utils", "import"] }
 
 [dependencies.web-sys]
 version = "0.3"
@@ -27,7 +27,7 @@ features = [
   "WebGlProgram",
   "WebGlShader",
   "WebGlUniformLocation",
-  "HtmlImageElement",
+  "ImageData",
   "WebGlTexture",
   "Window",
   "console",
