--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "scripts": {
     "build": "webpack --mode production",
     "serve": "webpack-dev-server",
-    "serve-build": "webpack-dev-server --mode production"
+    "serve-build": "webpack-dev-server --mode production",
+    "deploy": "npm run build && gh-pages -d dist"
   },
   "devDependencies": {
     "@wasm-tool/wasm-pack-plugin": "1.0.1",
     "eslint": "^7.6.0",
     "eslint-config-google": "^0.14.0",
     "file-loader": "^6.0.0",
+    "gh-pages": "^3.1.0",
     "html-webpack-plugin": "^3.2.0",
     "text-encoding": "^0.7.0",
     "webpack": "^4.29.4",
