--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,9 @@ name = "rust-webgl-tetrahedron"
 version = "0.1.0"
 authors = ["Benjamin Hinchliff <benjamin.hinchliff@gmail.com>"]
 edition = "2018"
+description = "it's rendering with WebGL from rust compiled to WebAssembly"
+repository = "https://github.com/BenjaminHinchliff/rust-wasm-webgl"
+license = "GPLv3"
 
 [lib]
 crate-type = ["cdylib"]
